--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Modificar.cshtml
@@ -214,7 +214,7 @@
 }
 <script>
 
-            function armar_diario() {
+    function armar_diario_retencion() {
 
                 var datos = {
                     IdProveedor: $("#IdProveedor").val(),
@@ -223,7 +223,7 @@
                 $.ajax({
                     type: 'POST',
                     data: JSON.stringify(datos),
-                    url: '@Url.Action("armar_diario", "Retencion", new { Area = "CuentasPorPagar" })',
+                    url: '@Url.Action("armar_diario_retencion", "Retencion", new { Area = "CuentasPorPagar" })',
                     async: false,
                     bDeferRender: true,
                     bProcessing: true,
