--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
@@ -847,8 +847,8 @@
                                 <div class="col-md-6">
                                     <div class="col-md-5">
                                         <div class="form-group">
-                                            <label for="IdProforma">Proforma</label>
-                                            @Html.TextBoxFor(q => q.IdProforma, new { @class = "form-control", @id = "IdProforma" })
+                                            <label for="IdProforma"></label>
+                                            @Html.TextBoxFor(q => q.IdProforma, new { @class = "form-control", @id = "IdProforma", @placeholder ="# Proforma" })
                                             @Html.ValidationMessageFor(q => q.IdProforma, "", new { @class = "text-danger" })
                                         </div>
                                     </div>
