--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/_GridViewPartial_archivo_transferencia_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/_GridViewPartial_archivo_transferencia_det.cshtml
@@ -5,7 +5,7 @@
     {
         settings.Name = "GridViewPartial_archivo_transferencia_det";
         settings.CallbackRouteValues = new { Controller = "ArchivosTransferencias", Action = "GridViewPartial_archivo_transferencia_det", IdArchivo =  Model.IdArchivo };
-        settings.KeyFieldName = "Secuencia";
+        settings.KeyFieldName = "IdArchivo";
         settings.Width = Unit.Percentage(100);
 
 
