--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/ProductoTipo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/ProductoTipo/Nuevo.cshtml
@@ -38,12 +38,7 @@
             </div>
             <div class="col-md-2">
                 <div class="checkbox">
-                    <label for="tp_ManejaLote">@Html.CheckBoxFor(q => q.tp_ManejaLote) Maneja lote</label>
-                </div>
-            </div>
-            <div class="col-md-2">
-                <div class="checkbox">
-                    <label for="tp_es_lote">@Html.CheckBoxFor(q => q.tp_es_lote) Es lote</label>
+                    <label for="tp_ManejaLote">@Html.CheckBoxFor(q => q.Aparece_fabricacion_bool) Maneja lote</label>
                 </div>
             </div>
         </div>
