--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/ProductoTipo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/ProductoTipo/Nuevo.cshtml
@@ -38,7 +38,7 @@
             </div>
             <div class="col-md-2">
                 <div class="checkbox">
-                    <label for="tp_ManejaLote">@Html.CheckBoxFor(q => q.Aparece_fabricacion_bool) Maneja lote</label>
+                    <label for="Aparece_fabricacion">@Html.CheckBoxFor(q => q.Aparece_fabricacion) Es fabricación</label>
                 </div>
             </div>
         </div>
