--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @model Core.Erp.Info.Helps.cl_filtros_Info
 @{
-    ViewBag.Title = "Novedades por empleados";
+    ViewBag.Title = "Archivos de transferencias";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -89,7 +89,7 @@
             </div>
         </div>
         <div class="box-body">
-            @Html.Action("GridViewPartial_empleado_novedad", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdSucursal = Model.IdSucursal })
+            @Html.Action("GridViewPartial_archivo_transferencia", new { Fecha_ini = Model.fecha_ini, Fecha_fin = Model.fecha_fin, IdSucursal = ViewBag.IdSucursal })
         </div>
         <!-- /.box-body -->
         <div class="box-footer">
