--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/_GridViewPartial_archivo_transferencia.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/_GridViewPartial_archivo_transferencia.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridViewPartial_archivo_transferencia";
-        settings.CallbackRouteValues = new { Controller = "ArchivosTransferencias", Action = "GridViewPartial_archivo_transferencia", Fecha_ini = ViewBag.fecha_ini, Fecha_fin = ViewBag.fecha_fin };
+        settings.CallbackRouteValues = new { Controller = "ArchivosTransferencias", Action = "GridViewPartial_archivo_transferencia",  Fecha_ini = ViewBag.fecha_ini, Fecha_fin = ViewBag.fecha_fin, IdSucursal = ViewBag.IdSucursal };
 
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdArchivo";
@@ -90,7 +90,7 @@
             column.PropertiesEdit.DisplayFormatString = "d";
 
         });
-       
+
         settings.Columns.Add("pe_cedulaRuc","Cédula").Width = Unit.Percentage(8);
         settings.Columns.Add("pe_nombreCompleto","Nombres").Width = Unit.Percentage(22);
         settings.Columns.Add("Descripcion","Nómina").Width = Unit.Percentage(8);
